<resources>
    <string name="app_name">My Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!-- Cadenas utilizadas en la app -->
    <string name="nuevaReceta">New Recipe</string>
    <string name="descripcio_n_receta">Recipe description</string>
    <string name="elaboracion_receta">Recipe elaboration</string>
    <string name="url_receta">Recipe URL</string>
    <string name="guardar_receta">Save Recipe</string>
    <string name="ingredientes">Ingredientes Receta</string>
    <string name="sel_Imagen">Seleccionar Imagen</string>
    <string name="title_activity_main">My Recipes</string>
    <string name="Recetas">Recipes</string>
    <string name="Favoritos">Favorites</string>
    <string name="Categorias">Categories</string>
    <string name="titulo_det_receta">Recipe</string>
    <string name="titulo_det_notas">Notes</string>
    <string name="titulo_det_imagenes">Photos</string>
    <string name="title_activity_actividad_detalle_receta">Recipe Detail</string>
    <string name="title_activity_actividad_detalle">ActividadDetalle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Recipes</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="categoria">Categorie</string>
    <string name="MaquinaCocinado">Cooked Machine</string>
    <string name="fecha">Date</string>
    <string name="notas">Notes</string>
    <string name="fechanota">Date Note</string>
    <string name="descripcionnota">Description Note</string>

</resources>