<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ultimas"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Recetas" />
        <item
            android:id="@+id/nav_favoritas"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Favoritos" />
        <item
            android:id="@+id/nav_categorias"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Categorias" />
        <item
            android:id="@+id/nav_tipos_elaboracion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/MaquinaCocinado" />
    </group>
</menu>