<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="271dp"
            android:layout_height="49dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/descripcio_n_receta"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etIndicaciones"
            android:layout_width="273dp"
            android:layout_height="210dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/elaboracion_receta"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etUrl"
            android:layout_width="267dp"
            android:layout_height="46dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textUri|text"
            android:text="@string/url_receta"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_Crear_Receta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar_receta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>