<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/descripcio_n_receta"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etIngredientes"
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/ingredientes"
            android:inputType="textMultiLine"
            android:singleLine="false" />

        <EditText
            android:id="@+id/etIndicaciones"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/elaboracion_receta"
            android:inputType="textMultiLine"
            android:singleLine="false"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etUrl"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/url_receta"
                android:inputType="textUri|text"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/ib_ir_url"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/buscar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivImagenReceta"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_imagen_vacio" />

            <Button
                android:id="@+id/btSeImagen"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:text="@string/sel_Imagen" />

        </LinearLayout>

        <Spinner
            android:id="@+id/spCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bt_Crear_Receta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_save_24" />

</androidx.constraintlayout.widget.ConstraintLayout>