<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentDetReceta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivDet_ImagenReceta"
                    android:layout_width="375dp"
                    android:layout_height="223dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_imagen_vacio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivDet_Favorito"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivDet_ImagenReceta"
                    app:layout_constraintEnd_toEndOf="@+id/ivDet_ImagenReceta"
                    app:layout_constraintHorizontal_bias="0.98"
                    app:layout_constraintStart_toStartOf="@+id/ivDet_ImagenReceta"
                    app:layout_constraintTop_toTopOf="@+id/ivDet_ImagenReceta"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvDet_DescripcionReceta"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:hint="@string/descripcio_n_receta"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ingredientes"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDet_ingredientes"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/elaboracion_receta"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDet_elaboracion"
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/url_receta"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etDet_Url"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:inputType="textUri" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>