<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="10"
    android:padding="10dp"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:divider="@android:drawable/divider_horizontal_textfield"
        android:orientation="vertical"
        android:showDividers="beginning|end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8">

                <ImageView
                    android:id="@+id/ivImagen"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_weight="8"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/ic_imagen_receta_foreground" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="0dp"
                    android:layout_height="59dp"
                    android:layout_weight="9"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivImagen"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvDescripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/descripcio_n_receta"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvIndicaciones"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/elaboracion_receta"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/btBorrar"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:contentDescription="@string/nuevaReceta"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                    app:srcCompat="@android:drawable/ic_menu_delete"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>

    <!--
    <LinearLayout
        android:orientation="vertical" android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1" android:gravity="right">
        <ImageView android:layout_height="30dp" android:layout_width="30dp" android:id="@+id/ivEdit" app:srcCompat="@drawable/ic_edit"/>
        <ImageView android:layout_height="30dp" android:layout_width="30dp" android:id="@+id/ivDelete" app:srcCompat="@drawable/ic_delete"/>
    </LinearLayout>
    -->
</LinearLayout>